--- a/public/index.html
+++ b/public/index.html
@@ -10,35 +10,28 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>React App</title>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
     <script src="https://cdn.fedapay.com/checkout.js?v=1.1.2"></script>
   </body>
+  <script>
+    var BASE_URL = 'http://127.0.0.1:8000';
+    axios.get(`${BASE_URL}/api/home/info`)
+      .then(response => {
+        // Utilisez les données ici pour mettre à jour votre page
+        document.title = response.data.info.name;
+        const link = document.querySelector('link[rel="apple-touch-icon"]');
+        const link2 = document.querySelector('link[rel="icon"]');
+        link.href = `data:image/png;base64,${response.data.info.logo}`;
+        link2.href = `data:image/png;base64,${response.data.info.logo}`;
+        console.log('Href du lien:', link.href); // Ajout d'un log pour le href du lien
+      })
+      .catch(error => console.error('Erreur:', error));
+</script>
 </html>
+
